[update] Experiments parser

--- a/core/src/main/resources/org/apache/spark/log4j-file-appender.properties
+++ b/core/src/main/resources/org/apache/spark/log4j-file-appender.properties
@@ -19,9 +19,10 @@
 log4j.rootLogger= OFF
 log4j.appender.profilerLog=org.apache.log4j.FileAppender
 log4j.appender.profilerLog.append=true
-log4j.appender.profilerLog.file=graphx/target/unit-tests.log
+log4j.appender.profilerLog.file=experiments/logs/experiment.log
 log4j.appender.profilerLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.profilerLog.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss.SSS} %t %p %c{1}: %m%n
+log4j.appender.profilerLog.MaxBackupIndex=1
+log4j.appender.profilerLog.layout.ConversionPattern=%m%n
 
 log4j.category.profilerLog=DEBUG, profilerLog
 log4j.additivity.profilerLog=false
